--- a/react-app/src/components/styles/NavBar.css
+++ b/react-app/src/components/styles/NavBar.css
@@ -1,6 +1,40 @@
 nav{
     display: flex;
-    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
     width: 100%;
     height: 64px;
+    background-color: lightskyblue;
+}
+
+.signup{
+    display: block;
+    border-radius: 10px;
+    background-color: lightgreen;
+    padding: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    text-decoration: none;
+
+}
+
+.login{
+    display: block;
+    border-radius: 10px;
+    background-color: white;
+    padding: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.home{
+    display: block;
+    border-radius: 10px;
+    background-color:lightgreen;
+    padding: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    text-decoration: none;
 }
