--- a/react-app/src/components/styles/NavBar.css
+++ b/react-app/src/components/styles/NavBar.css
@@ -6,7 +6,7 @@ nav{
     flex-direction: row;
     width: 100%;
     height: 64px;
-    background-color: lightskyblue;
+    background-color: #E34819;
 
 }
 
