--- a/react-app/src/components/styles/NavBar.css
+++ b/react-app/src/components/styles/NavBar.css
@@ -1,13 +1,23 @@
 nav{
-
-    display: flex;
+    /* display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
     width: 100%;
     height: 64px;
-    background-color: #E34819;
+    background-color: #E34819; */
 
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    box-shadow: 0px 1px 4px 0px rgb(0 0 0 / 20%);
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    height: 64px;
+    padding: 0 30px;
 }
 
 .signup{
