--- a/react-app/src/components/styles/LogoutButton.css
+++ b/react-app/src/components/styles/LogoutButton.css
@@ -6,4 +6,8 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
     text-decoration: none;
+    background-color: limegreen;
+    color: black;
+    font-weight: bold;
+    font-size: 17px;
 }
