--- a/react-app/src/components/styles/NavBar.css
+++ b/react-app/src/components/styles/NavBar.css
@@ -10,6 +10,7 @@ nav{
     -webkit-align-items: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
+    justify-content: space-between;
     align-items: center;
     box-shadow: 0px 1px 4px 0px rgb(0 0 0 / 20%);
     display: -webkit-box;
@@ -21,14 +22,28 @@ nav{
 }
 
 .signup{
-    display: block;
+    /* display: block;
     border-radius: 10px;
     background-color: lightgreen;
     padding: 10px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
-    text-decoration: none;
+    text-decoration: none; */
 
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 28px;
+    -webkit-letter-spacing: -0.25px;
+    -moz-letter-spacing: -0.25px;
+    -ms-letter-spacing: -0.25px;
+    letter-spacing: -0.25px;
+    -webkit-text-decoration: unset;
+    text-decoration: unset;
+    margin-left: 1050px;
+    color: black;
+    font-weight: bold;
 }
 
 .login{
@@ -44,9 +59,14 @@ nav{
 .home{
     display: block;
     border-radius: 10px;
-    background-color:lightgreen;
     padding: 10px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
     text-decoration: none;
+    font-size: 27px;
+    color:black;
+}
+
+.feather_icon {
+    color: black;
 }
