--- a/react-app/src/components/styles/NavBar.css
+++ b/react-app/src/components/styles/NavBar.css
@@ -29,20 +29,23 @@ nav{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
     text-decoration: none; */
-
-    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 28px;
-    -webkit-letter-spacing: -0.25px;
-    -moz-letter-spacing: -0.25px;
-    -ms-letter-spacing: -0.25px;
-    letter-spacing: -0.25px;
-    -webkit-text-decoration: unset;
-    text-decoration: unset;
-    margin-left: 1050px;
     color: black;
+    text-decoration: none;
+    align-items: center;
+    box-sizing: border-box;
+    display: inline-flex;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    white-space: nowrap;
+    padding: 0px 36px;
+    height: 48px;
+    min-width: 144px;
+    border-radius: 24px;
+    cursor: pointer;
+    background-color: rgb(0, 200, 5);
+    font-size: 20px;
     font-weight: bold;
 }
 
