--- a/react-app/src/components/styles/Stocks.css
+++ b/react-app/src/components/styles/Stocks.css
@@ -39,6 +39,7 @@
     position: absolute;
     display: flex;
     align-items: left;
+    margin-top: 45px;
     margin-left: 680px;
 }
 .actions-container{
@@ -99,7 +100,9 @@
     color: rgb(184, 62, 88);
 }
 .watchlist-container{
-      border-radius: 8px;
+    margin-top: 30px;;
+    margin-left: 50px;
+    border-radius: 8px;
   }
 .form-item{
       font-size: 12px;
@@ -134,4 +137,12 @@
 .buying-power-container{
 font-size: 10px;
 margin-left: 40px;
+}
+
+.company-graph{
+    position: absolute;
+    margin-top: 190px;;
+    height: 300px;
+    width: 600px;
+    margin-left: 12px;    
 }
