cleaned up logged in user navbar

--- a/react-app/src/components/styles/NavBar.css
+++ b/react-app/src/components/styles/NavBar.css
@@ -78,3 +78,27 @@ nav{
 .fa-feather:before {
     margin-left: 5px;
 }
+
+.nav_icons {
+    display: flex;
+}
+
+.dashboard {
+    display: block;
+    border-radius: 10px;
+    background-color: white;
+    padding: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    font-size: 17px;
+    position: absolute;
+    right:100px;
+}
+
+.welcome_message {
+    position: absolute;
+    right: 1250px;
+}
