--- a/react-app/src/components/styles/Stocks.css
+++ b/react-app/src/components/styles/Stocks.css
@@ -167,6 +167,7 @@ margin-left: 40px;
     height: 64px;
     border-radius: 50%;
     perspective: 800px;
+    background-color: black;
   }.inner {
     position: absolute;
     box-sizing: border-box;
