--- a/react-app/src/components/styles/Dashboard.css
+++ b/react-app/src/components/styles/Dashboard.css
@@ -5,7 +5,7 @@
     grid-template-columns: repeat(5, 1fr);
     grid-auto-rows: minmax(150px, auto);
     grid-template-areas:
-    '. portfolioDiv portfolioDiv watchlistDiv .'
+    '. portfolioDiv portfolioDiv porfolioListDiv .'
     '. graph graph watchlistDiv .'
     '. graph graph watchlistDiv .'
     '. addFundsDiv addFundsDiv watchlistDiv .'
@@ -34,6 +34,34 @@
     padding: 10px;
 }
 
+.porfolioListDiv {
+    grid-area: porfolioListDiv;
+    background-color: aquamarine;
+    margin-left: 30px;
+    padding: 10px;
+}
+
+.porfolioUl {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
+
+.porfolioLi {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: minMax(20px, auto);
+    grid-template-areas:
+    'ticker lilGraph price'
+    'shares lilGraph percent'
+    ;
+    font-size: 12px;
+    letter-spacing: .5px;
+    margin: 0;
+    padding: 0;
+}
+
 .watchlistDiv {
     grid-area: watchlistDiv;
     background-color: lightcyan;
@@ -51,19 +79,18 @@
 .watchlist-li{
     display: flex;
 }
+
 .watchlistLi {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-template-rows: minMax(20px, auto);
     grid-template-areas:
     'ticker lilGraph price'
-
     ;
     font-size: 12px;
     letter-spacing: .5px;
     margin: 5px;
     padding: 0;
-
 }
 
 .ticker {
