fixed incoming data

--- a/react-app/src/components/styles/Stocks.css
+++ b/react-app/src/components/styles/Stocks.css
@@ -106,7 +106,7 @@
   border-radius: 8px;
 }
 .watchlist-container-2{
-    margin-top: 30px;;
+    margin-top: 30px;
     margin-left: 140px;
     border-radius: 8px;
   }
