--- a/react-app/src/components/styles/Stocks.css
+++ b/react-app/src/components/styles/Stocks.css
@@ -100,12 +100,12 @@
     /* background-color: rgb(10, 168, 18); */
     color: rgb(184, 62, 88);
 }
-.watchlist-container-1{
+.add-to{
   margin-top: 30px;;
-  margin-left: 140px;
+  margin-left: 160px;
   border-radius: 8px;
 }
-.watchlist-container-2{
+.remove-from{
     margin-top: 30px;
     margin-left: 140px;
     border-radius: 8px;
