--- a/react-app/src/components/styles/Stocks.css
+++ b/react-app/src/components/styles/Stocks.css
@@ -6,7 +6,7 @@
     left: 0;
     width:100%;
     height:100%;
-    background-color: black;
+    /* background-color: black; */
 }
 .stocks-info-container{
     display: flex;
@@ -210,3 +210,12 @@ margin-left: 40px;
       transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
     }
   }
+
+.sellDiv {
+  position: absolute;
+  left: 270px;
+  width: 250px;
+  height: 400px;
+  outline: 1px solid black;
+  box-shadow: 1px 1px 5px black;
+}
