--- a/react-app/src/components/styles/Stocks.css
+++ b/react-app/src/components/styles/Stocks.css
@@ -1,7 +1,7 @@
 .stocks-background{
     display: flex;
     justify-content: center;
-    position:fixed;
+    position: relative;
     top:0;
     left: 0;
     width:100%;
@@ -13,7 +13,7 @@
     justify-content: flex-start;
     margin-top: 70px;
     padding-top: 36px;
-    height: 100%;
+    height: 50vw;
     width: 50%;
     background-color: white;
 }
