--- a/react-app/src/components/styles/Footer.css
+++ b/react-app/src/components/styles/Footer.css
@@ -14,7 +14,7 @@
   height: 64px;
   background-color: black;
   margin-bottom: 0px;
-  margin-top: 1000px;
+  /* margin-top: 1000px; */
 }
 
 .about_us {
