--- a/react-app/src/components/styles/NavBar.css
+++ b/react-app/src/components/styles/NavBar.css
@@ -178,4 +178,9 @@ nav{
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+
+  }
+
+  .dropdown-content a:hover {
+      background-color: lightskyblue;
   }
