--- a/react-app/src/components/styles/Home.css
+++ b/react-app/src/components/styles/Home.css
@@ -96,3 +96,33 @@
     -webkit-text-decoration: unset;
     text-decoration: unset;
 }
+
+.sign_up {
+    color: white;
+    text-decoration: none;
+    align-items: center;
+    box-sizing: border-box;
+    display: inline-flex;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    white-space: nowrap;
+    padding: 0px 36px;
+    height: 48px;
+    min-width: 144px;
+    border-radius: 24px;
+    cursor: pointer;
+    background-color: black;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.sign_up_outer_container {
+    display: flex;
+}
+
+.sign_up_container {
+    position: relative;
+    margin-top: 50px;
+}
