watchlist lilgraphs working

--- a/react-app/src/components/styles/Dashboard.css
+++ b/react-app/src/components/styles/Dashboard.css
@@ -119,6 +119,9 @@
     align-items: center;
     text-align: center;
     background-color: white;
+    /* height: 200px;
+    width: 900px; */
+    width: 100px;
 }
 
 .price {
