--- a/react-app/src/components/styles/NavBar.css
+++ b/react-app/src/components/styles/NavBar.css
@@ -33,7 +33,8 @@ nav{
 
 .thirdbox{
     grid-column: 3;
-    width: 50vw;
+    position: fixed;
+    /* width: 50vw; */
     margin-right: 283px;
 }
 
