--- a/react-app/src/components/styles/NavBar.css
+++ b/react-app/src/components/styles/NavBar.css
@@ -1,16 +1,16 @@
 nav{
-    /* display: flex;
-    justify-content: space-evenly;
+    display: flex;
+    /* justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
     width: 100%;
     height: 64px;
-    background-color: #E34819; */
+    background-color: #E34819;  */
     /* -webkit-align-items: center;
     -webkit-box-align: center;
     -ms-flex-align: center; */
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr; */
     justify-content: space-between;
     align-items: center;
     align-content: center;
@@ -32,9 +32,12 @@ nav{
 }
 
 .thirdbox{
-    grid-column: 3;
+    /* grid-column: 3;
     width: 50vw;
-    margin-right: 283px;
+    margin-right: 283px; */
+    position: relative;
+    display: flex;
+    min-width: 100px;
 }
 
 .fourthbox{
@@ -162,8 +165,22 @@ nav{
 .search {
     /* position: absolute;
     right: 740px; */
-    margin-right: 620px;
-    margin-bottom: 15px;
+
+    /* margin-right: 620px;
+    margin-bottom: 15px; */
+
+    border: 1px solid grey;
+    border-radius: 5px;
+    height: 20px;
+    width: 100%;
+    padding: 2px 23px 2px 30px;
+    outline: 0;
+    background-color: #f5f5f5;
+}
+
+.search:hover, .search:focus {
+    border: 1.5px solid #009688;
+    background-color: white;
 }
 
 .logout_btn {
