fixed css syntax error

--- a/react-app/src/components/styles/NavBar.css
+++ b/react-app/src/components/styles/NavBar.css
@@ -39,11 +39,13 @@ nav{
     display: flex;
     min-width: 100px;
     align-self: flex-start;
+}
 
 .fourthbox{
     grid-column: 4;
     margin-right: 300px;
 }
+
 .signup{
     /* display: block;
     border-radius: 10px;
