--- a/react-app/src/components/styles/Dashboard.css
+++ b/react-app/src/components/styles/Dashboard.css
@@ -6,9 +6,10 @@
     grid-auto-rows: minmax(150px, auto);
     grid-template-areas:
     '. portfolioDiv portfolioDiv . .'
-    '. graph graph porfolioListDiv .'
-    '. graph graph watchlistDiv .'
-    '. addFundsDiv addFundsDiv watchlistDiv .'
+    '. graph graph sidebar-div .'
+    '. graph graph sidebar-div .'
+    '. addFundsDiv addFundsDiv sidebar-div .'
+    '. . . sidebar-div .'
     '. . . . .'
     ;
     width: 100%;
@@ -16,11 +17,12 @@
 
 .portfolioDiv {
     grid-area: portfolioDiv;
-    background-color: rgb(211, 147, 182);
+    /* background-color: rgb(211, 147, 182); */
     margin: 0px;
     padding-left: 10px;
     position: relative;
     bottom: 0;
+    border-bottom: black solid 1px;
 }
 
 .portfolioDiv h1 {
@@ -33,20 +35,53 @@
     grid-area: graph;
     margin: 0;
     padding: 10px;
+    border-bottom: black solid 2px;
 }
 
 .addFundsDiv {
     grid-area: addFundsDiv;
-    background-color: lightyellow;
-    margin: 0;
-    padding: 10px;
+    /* background-color: lightyellow; */
+    margin: 0px;
+    padding: 5px;
+}
+
+.sidebar-div {
+    grid-area: sidebar-div;
+    background-color: rgb(219, 226, 231);
+    color: black;
+    margin-left: 30px;
+    padding: 3px;
+    border: black solid 1px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 1px black;
+    overflow-y: scroll;
+    overflow-x: none;
+}
+
+.sidebar-div h1 {
+    display: flex;
+    justify-content: center;
+}
+
+.sidebar-div::-webkit-scrollbar {
+    background-color: #6afa27;
+    width: 8px;
+    border-radius: 10px;
+    border: black solid 1px;
+}
+
+/* thumb is the slider */
+.sidebar-div::-webkit-scrollbar-thumb {
+    background-color: black;
+    width: 4px;
+    border-radius: 10px;
 }
 
 .porfolioListDiv {
-    grid-area: porfolioListDiv;
-    background-color: aquamarine;
-    margin-left: 30px;
-    padding: 10px;
+    /* background-color: aquamarine; */
+    margin: 3px;
+    height: 50%;
+    border-bottom: black solid 2px;
 }
 
 .porfolioUl {
@@ -71,10 +106,7 @@
 }
 
 .watchlistDiv {
-    grid-area: watchlistDiv;
-    background-color: lightcyan;
-    margin-left: 30px;
-    padding: 10px;
+    /* background-color: lightcyan; */
 }
 
 .watchlistUl {
@@ -84,93 +116,108 @@
     padding: 0;
 }
 
-.watchlist-li{
-    display: flex;
-}
-
 .watchlistLi {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: minMax(20px, auto);
-    grid-template-areas:
-    'ticker lilGraph price'
-    ;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     font-size: 12px;
     letter-spacing: .5px;
-    margin: 5px;
-    padding: 0;
+    margin: 1px;
+    padding: 5px;
+    border: black solid 1px;
+    border-radius: 3px;
 }
 
 .ticker {
-    grid-area: ticker;
-    margin: 0;
-    padding: 3px;
-    text-align: center;
-    font-weight: bold;
-    align-items: center;
+    display: flex;
     justify-content: center;
+    font-weight: bold;
+    padding: 3px;
+    height: 100%;
+    width: 25%;
 }
 
 .shares {
-    grid-area: shares;
-    margin: 0;
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
     padding: 3px;
-    text-align: center;
+    height: 100%;
+    width: 25%;
 }
 
 .lilGraph {
-    grid-area: lilGraph;
-    margin: 0;
     padding: 3px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
     background-color: white;
-    /* height: 200px;
-    width: 900px; */
-    width: 100px;
+    border-radius: 3px;
+    box-shadow: 0px 0px 5px 1px black;
+    width: 50%;
 }
 
 .price {
-    grid-area: price;
-    margin: 0;
-    padding: 3px;
-    text-align: center;
-    align-items: center;
+    display: flex;
     justify-content: center;
+    position: relative;
+    font-weight: bold;
+    padding: 3px;
+    height: 100%;
+    width: 25%;
 }
 
 .percent {
-    grid-area: percent;
-    margin: 0;
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
     padding: 3px;
-    text-align: center;
+    height: 100%;
+    width: 25%;
 }
 
 .add-funds-form {
     display: flex;
     flex-direction: column;
+    border-bottom: black solid 1px;
 }
 
 .add-funds-form input {
     margin-left: 0;
-    width: 40%;
+    margin-top: 10px;
+    width: 32%;
     height: 5px;
-    padding: 20px 10px;
-    box-shadow: 0px 0px 10px 3px black;
-    box-sizing: border-box;
+    padding: 15px 10px;
+    /* values = x   y  blur spread color */
+    /* box-shadow: 0px 0px 3px 1px black; */
+    /* border-radius: 5px; */
+    border: none;
+    border-bottom: black solid 1px;
+    background-color: transparent;
 }
 
 .add-funds-form input:focus {
     /* box-shadow: 0px 0px 10px 5px black; */
-    border-radius: 5px;
+    /* border-radius: 5px;
+    box-shadow: 0px 0px 3px 3px black; */
+    border: none;
+    border-bottom: black solid 1px;
+}
+
+.add-funds-form input:valid {
+    /* box-shadow: 0px 0px 10px 5px black; */
+    /* border-radius: 5px;
+    box-shadow: 0px 0px 3px 3px black; */
+    border: none;
+    border-bottom: black solid 1px;
+    background-color: transparent;
 }
 
 .add-funds-form button {
     padding: 15px;
-    width: 40%;
-    margin-top: 8px;
+    width: 35%;
+    margin-top: 10px;
+    margin-bottom: 3px;
+    border: black solid 1px;
+    border-radius: 3px;
 }
 
 .dashboard-button {
@@ -190,4 +237,12 @@
     color: #6afa27;
     background-color: black;
     border-radius: 3px;
+}
+
+.add-funds-pTag {
+    margin: 8px;
+}
+
+.available-funds-h3 {
+    margin: 8px;
 }
