--- a/react-app/src/components/styles/LoginForm.css
+++ b/react-app/src/components/styles/LoginForm.css
@@ -18,13 +18,14 @@ html, body {
     float: left;
     width: 50%;
     flex: 50%;
-}   
+}
 .row{
     display: flex;
     height:100%;
 }
 .login-form{
 }
+
 label {
     margin-top: 40px;
     margin-left: 80px;
@@ -38,8 +39,8 @@ label {
     font-style: bold;
 }
 
-input {
-    margin-top: 20px;
+.input-div input {
+    margin-top: 5px;
     height: 30px;
     width: 400px;
     flex: 0 0 200px;
@@ -47,10 +48,12 @@ input {
     border-radius: 4px;
     border-color: rgba(196, 167, 144, 0.8);
 }
-input:hover {
+
+.input-div:hover {
     border-color: rgb(190, 83, 106);
 }
-input:focus {
+
+.input-div:focus {
     transition: border-color 200ms ease 0s;
     /* outline: 2px solid rgb(0, 255, 13); */
     outline: 2px solid rgb(196, 109, 128);
@@ -91,11 +94,11 @@ input:focus {
     font-weight: 500;
   }
   .errors{
-      display: flex;
-      flex-direction: column;
-      align-content: center;
-      /* margin-top: 20px; */
-      margin-left: 80px;
-     font-family: sans-serif;
-     font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    /* margin-top: 20px; */
+    margin-left: 80px;
+    font-family: sans-serif;
+    font-weight: bold;
   }
