--- a/react-app/src/components/styles/Dashboard.css
+++ b/react-app/src/components/styles/Dashboard.css
@@ -55,7 +55,7 @@
     border-radius: 5px;
     box-shadow: 0px 0px 10px 1px black;
     overflow-y: scroll;
-    overflow-x: none;
+    overflow-x: hidden;
 }
 
 .sidebar-div h1 {
@@ -80,7 +80,7 @@
 .porfolioListDiv {
     /* background-color: aquamarine; */
     margin: 3px;
-    height: 50%;
+    min-height: 50%;
     border-bottom: black solid 2px;
 }
 
@@ -92,17 +92,15 @@
 }
 
 .porfolioLi {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: minMax(20px, auto);
-    grid-template-areas:
-    'ticker lilGraph price'
-    'shares lilGraph percent'
-    ;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     font-size: 12px;
     letter-spacing: .5px;
-    margin: 0;
-    padding: 0;
+    margin: 1px;
+    padding: 5px;
+    border: black solid 1px;
+    border-radius: 3px;
 }
 
 .watchlistDiv {
@@ -134,7 +132,7 @@
     font-weight: bold;
     padding: 3px;
     height: 100%;
-    width: 25%;
+    width: 20%;
 }
 
 .shares {
@@ -162,7 +160,7 @@
     font-weight: bold;
     padding: 3px;
     height: 100%;
-    width: 25%;
+    width: 30%;
 }
 
 .percent {
@@ -172,6 +170,27 @@
     padding: 3px;
     height: 100%;
     width: 25%;
+}
+
+.port-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-weight: bold;
+    padding: 3px;
+    height: 100%;
+    width: 30%;
+}
+
+.port-div p {
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    text-align: center;
+    margin: 0;
+    padding: 2px;
+    width: 100%;
+    height: 50%;
 }
 
 .add-funds-form {
