Last css and done for the night I think

--- a/react-app/src/components/styles/Stocks.css
+++ b/react-app/src/components/styles/Stocks.css
@@ -242,11 +242,24 @@ margin-left: 40px;
 .trade-alert-buy{
   position:absolute;
   top:59%;
-  left:63%;
-  background-color:white;
+  left:60.7%;
+  width: 251px;
+  height: 39px;
+  text-align: center;
+  vertical-align: center;
+  color: white;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  -webkit-transition: green 2s ease-out;
-  -moz-transition: green 2s ease-out;
-  -o-transition: green 2s ease-out;
-  transition: green 2s ease-out;
+  background-color:rgb(37, 250, 37);
+  -webkit-animation: fadeinout 4s linear forwards;
+  animation: fadeinout 4s linear forwards;
+}
+
+@-webkit-keyframes fadeinout {
+  0%,100% { opacity: 0; }
+  50% { opacity: 1; }
+}
+
+@keyframes fadeinout {
+  0%,100% { opacity: 0; }
+  50% { opacity: 1; }
 }
