--- a/react-app/src/components/styles/NavBar.css
+++ b/react-app/src/components/styles/NavBar.css
@@ -38,7 +38,6 @@ nav{
     position: relative;
     display: flex;
     min-width: 100px;
-    align-self: flex-start;
 }
 
 .fourthbox{
@@ -184,6 +183,7 @@ nav{
     padding: 2px 23px 2px 30px;
     outline: 0;
     background-color: #f5f5f5;
+    margin-left: 80px;
 }
 
 .search:hover, .search:focus {
