--- a/react-app/src/components/styles/Dashboard.css
+++ b/react-app/src/components/styles/Dashboard.css
@@ -202,13 +202,13 @@
 .add-funds-form input {
     margin-left: 0;
     margin-top: 10px;
-    width: 32%;
+    width: 80%;
     height: 5px;
     padding: 15px 10px;
     /* values = x   y  blur spread color */
     /* box-shadow: 0px 0px 3px 1px black; */
     /* border-radius: 5px; */
-    border: none;
+    border: 1px solid grey;
     border-bottom: black solid 1px;
     background-color: transparent;
 }
