--- a/react-app/src/components/styles/NavBar.css
+++ b/react-app/src/components/styles/NavBar.css
@@ -1,5 +1,7 @@
 nav{
     display: flex;
+    z-index: 10;
+    position: fixed;
     /* justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
@@ -15,11 +17,13 @@ nav{
     align-items: center;
     align-content: center;
     box-shadow: 0px 1px 4px 0px rgb(0 0 0 / 20%);
+    background-color: lime;
     /* display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex; */
     height: 64px;
+    width: 95vw;
     padding: 0 30px;
     margin-top: 0px;
 }
@@ -132,6 +136,7 @@ nav{
     color: black;
     font-weight: bold;
     font-size: 17px;
+    margin-right: 5px;
 }
 
 .welcome_message_container {
@@ -152,6 +157,7 @@ nav{
     color: black;
     font-weight: bold;
     font-size: 17px;
+    padding: 5px;
 }
 
 .search_outer_container {
@@ -215,11 +221,15 @@ nav{
   .dropdown-content {
     display:flex;
     flex-direction: column;
-    position: relative;
+    /* position: fixed; */
     background-color: #f6f6f6;
-    min-width: 230px;
+    min-width: 100px;
+    max-width: 200px;
+    height: 300px;
     border: 1px solid #ddd;
-    z-index: 1;
+    z-index: 100;
+    overflow-y: scroll;
+    overflow-x: auto;
   }
 
   /* Links inside the dropdown */
