--- a/react-app/src/components/styles/NavBar.css
+++ b/react-app/src/components/styles/NavBar.css
@@ -1,4 +1,4 @@
-nav{
+.logged_in_navbar{
     display: flex;
         /* position: absolute; */
     /* justify-content: space-evenly;
@@ -23,6 +23,35 @@ nav{
     height: 64px;
     padding: 0 30px;
     margin-top: 0px;
+    position: fixed;
+    background-color: white;
+}
+.logged_out_navbar{
+    display: flex;
+    /* position: absolute; */
+    /* justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    height: 64px;
+    background-color: #E34819;  */
+    /* -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center; */
+    /* display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr; */
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    box-shadow: 0px 1px 4px 0px rgb(0 0 0 / 20%);
+    /* display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; */
+    height: 64px;
+    padding: 0 30px;
+    margin-top: 0px;
+    background-color: white;
 }
 /* nav{
     display: flex;
@@ -148,6 +177,8 @@ nav{
 
 .nav_icons {
     display: flex;
+    position: absolute;
+    left: 85vw;
 }
 
 .dashboard {
