--- a/react-app/src/components/styles/Footer.css
+++ b/react-app/src/components/styles/Footer.css
@@ -12,7 +12,7 @@
   flex-direction: row;
   width: 100%;
   height: 64px;
-  background-color: black;
+  background-color: rgb(16,220,4);
   margin-bottom: 0px;
   /* margin-top: 1000px; */
 }
@@ -29,5 +29,5 @@
   letter-spacing: -0.25px;
   -webkit-text-decoration: unset;
   text-decoration: unset;
-  color: white;
+  color: black;
 }
