--- a/react-app/src/components/styles/Dashboard.css
+++ b/react-app/src/components/styles/Dashboard.css
@@ -239,6 +239,11 @@
     border-radius: 3px;
 }
 
+.warning{
+    color: red;
+    font-weight: bold;
+}
+
 .dashboard-button {
     border: none;
     font-weight: bold;
