--- a/react-app/src/components/styles/AboutUs.css
+++ b/react-app/src/components/styles/AboutUs.css
@@ -12,7 +12,7 @@
   border-bottom: 1px solid black;
   padding: 120px 0px;
   box-sizing: border-box;
-  background: rgb(216, 211, 211);
+  background: rgb(197, 195, 195);
 }
 
 .about_us_inner_container {
@@ -52,7 +52,7 @@
   max-width: 25%;
   margin: 10px;
   border-radius: 50%;
-  border: 3px solid #B4A0E5;
+  border: 3px solid #716f75;
   text-decoration: none;
 }
 
