--- a/react-app/src/components/styles/Stocks.css
+++ b/react-app/src/components/styles/Stocks.css
@@ -285,3 +285,27 @@ margin-left: 40px;
   background-color: black;
   border-radius: 3px;
 }
+
+
+.watchlist-btn-add{
+  position: absolute;
+  display: flex;
+  /* background-color: rgb(13, 223, 24); */
+  background-color: white;
+  border: none;
+  color: rgb(74, 192, 70);
+  padding: 15px 40px;
+  text-align: center;
+  align-self: flex-start;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 4px;
+  /* margin-left: 400px; */
+  margin-top: 450px;
+  outline: 1px solid;
+}
+.watchlist-btn-add:hover{
+  /* background-color: rgb(10, 168, 18); */
+  color: rgb(9, 104, 40);
+}
