about us color change

--- a/react-app/src/components/styles/AboutUs.css
+++ b/react-app/src/components/styles/AboutUs.css
@@ -12,7 +12,7 @@
   border-bottom: 1px solid black;
   padding: 120px 0px;
   box-sizing: border-box;
-  background: rgb(197, 195, 195);
+  background: rgb(84, 226, 108)
 }
 
 .about_us_inner_container {
