--- a/react-app/src/components/styles/Dashboard.css
+++ b/react-app/src/components/styles/Dashboard.css
@@ -14,7 +14,7 @@
     ;
     width: 100%;
 }
-.linkstostocks{
+.link-to-stocks{
     border: 1px solid black;
     background-color: greenyellow;
     text-decoration: none;
